vlib/v/checker/tests/enum_single_letter.out
vlib/v/checker/tests/enum_single_letter.vv:1:6: error: single letter capital names are reserved for generic template types.
    1 | enum E {
      |      ^
    2 |     v w
    3 | }
