vlib/v/checker/tests/enum_single_letter.vv
enum E {
    v w
}
println(E.v)
